--- a/package.xml
+++ b/package.xml
@@ -8,6 +8,7 @@
 	<license>BSD</license>
 	<buildtool_depend>catkin</buildtool_depend>
 	<depend>roscpp</depend>
+        <depend>rosbag</depend>
 	<depend>cv_bridge</depend>
 	<depend>image_transport</depend>
 </package>
